# sense_temp

./: CMakeLists.txt  README.md  diagram.json  sense_temp.c  wokwi.toml
lib/: font.h  ssd1306.c  ssd1306.h
